--- a/public/site/dangky-ungvien.html
+++ b/public/site/dangky-ungvien.html
@@ -198,11 +198,12 @@
             <div class="container">
                 <div class="col-sm-8 col-sm-push-2">
                     <div class="candidate-register-wrapper space-between no-wrap">
-                        <h1>Nhà tuyển dụng đăng ký</h1>
+                        <h1>Ứng viên đăng ký</h1>
                         <form class="signup-form">
                             <div class="form-group">
                                 <label for="txtEmail">Email *</label>
                                 <input type="email" class="form-control" id="txtEmail" placeholder="Enter your email">
+                                <p class="help-block">Dùng <strong>email</strong> để đảm bảo nhận được link kích hoạt từ hệ thống.</p>
                             </div>
 
                             <div class="form-group">
@@ -215,15 +216,41 @@
                                 <input type="password" class="form-control" id="txtconfirmPassword" placeholder="Password">
                             </div>
                             <div class="form-group">
-                                <label for="txtCompanyName">Tên công ty *</label>
-                                <input type="text" class="form-control" id="txtCompanyName" placeholder="Tên công ty">
+                                <label for="txtFullName">Tên đầy đủ *</label>
+                                <input type="text" class="form-control" id="txtFullName" placeholder="Tên đầy đủ">
                             </div>
                             <div class="form-group">
-                                <label for="txtAddress">Địa chỉ *</label>
-                                <input type="text" class="form-control" id="txtAddress" placeholder="Địa chỉ">
-                            </div>
+                                    <label>Ngày sinh *</label>
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <select class="form-control">
+                                                <option value="0">Ngày</option>
+                                                <option value="1">01</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-sm-4">
+                                                <select class="form-control">
+                                                    <option value="0">Tháng</option>
+                                                    <option value="1">01</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-sm-4">
+                                                    <select class="form-control">
+                                                        <option value="0">Năm</option>
+                                                        <option value="2017">2017</option>
+                                                    </select>
+                                                </div>
+                                    </div>                                  
+                                </div>
+                                <div class="form-group">
+                                        <label for="txtAddress">Giới tính</label>
+                                        <select class="form-control">
+                                                <option value="0">Nam</option>
+                                                <option value="1">Nữ</option>
+                                            </select>
+                                    </div>                            
                             <div class="form-group">
-                                <label for="txtCapital">Tỉnh/Thành phố *</label>
+                                <label for="txtCapital">Thành phố bạn đang sống *</label>
                                 <select class="form-control">
                                         <option value="0">Tỉnh/Thành phố</option>
                                         <option value="volvo">Volvo</option>
@@ -231,47 +258,15 @@
                                         <option value="mercedes">Mercedes</option>
                                         <option value="audi">Audi</option>
                                       </select>
-                            </div>
+                            </div>                                                        
                             <div class="form-group">
-                                <label for="txtSize">Quy mô công ty</label>
-                                <input type="text" class="form-control" id="txtSize" placeholder="Quy mô công ty">
-                            </div>
+                                <label for="txtPhone">Số điện thoại *</label>
+                                <input type="text" class="form-control" id="txtPhone" placeholder="Số điện thoại của bạn">
+                            </div>                           
                             <div class="form-group">
-                                <label for="txtDescription">Mô tả sơ lược về công ty</label>
-                                <textarea name="description" id="txtDescription" required="" rows="6" placeholder="Here goes your message"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <label for="txtWebsite">Website</label>
-                                <input type="text" class="form-control" id="txtWebsite" placeholder="Website">
-                            </div>
-                            <div class="form-group">
-                                    <label for="txtLogo">Logo</label>
-                                    <input type="file" class="form-control" id="txtLogo">
+                                    <label for="txtAddress">Địa chỉ *</label>
+                                    <input type="text" class="form-control" id="txtAddress" placeholder="Địa chỉ">
                                 </div>
-                            <div class="form-group">
-                                <label for="txtPhone">Số điện thoại</label>
-                                <input type="text" class="form-control" id="txtPhone">
-                            </div>
-                            <div class="form-group">
-                                <label for="txtFax">Fax</label>
-                                <input type="text" class="form-control" id="txtFax">
-                            </div>
-                            <div class="form-group">
-                                <label for="txtContact">Tên người liên hệ *</label>
-                                <input type="text" class="form-control" id="txtContact" placeholder="Tên người liên hệ">
-                            </div>
-                            <div class="form-group">
-                                <label for="txtPosition">Chức vụ người liên hệ</label>
-                                <input type="text" class="form-control" id="txtPosition" placeholder="Chức vụ người liên hệ">
-                            </div>
-                            <div class="form-group">
-                                <label for="txtEmailContact">Email liên hệ: *</label>
-                                <input type="text" class="form-control" id="txtEmailContact" placeholder="Email liên hệ">
-                            </div>
-                            <div class="form-group">
-                                <label for="txtPhoneContact">Số điện thoại liên hệ: *: *</label>
-                                <input type="text" class="form-control" id="txtPhoneContact" placeholder="Số điện thoại liên hệ">
-                            </div>
                             <div class="checkbox">
                                 <input id="signup-checkbox" type="checkbox">
                                 <label for="signup-checkbox">I agree with the Terms of Use</label>
